--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@ a:hover, a:focus{
 }
 button {
     cursor: pointer;
+    padding: 0;
+    margin: 0;
 }
 a{
     font-size: 12px;
@@ -75,7 +77,7 @@ img{
     .container{
     padding: 0 15px;
     margin: 0 auto;
-    max-width: 1158px;
+    max-width: 1440px;
     }
 }
 
@@ -201,5 +203,77 @@ img{
         font-size: 12px;
         line-height: 1.5;
         letter-spacing: 0.02em;
+    }
+}
+
+
+/* section-one */
+
+.section-one-container{
+    background: #2e2f42;
+    padding: 72px 52px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/section-one/Dark-bg-mob-min.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin: 0 auto;
+}
+.section-one-title{
+    font-size: 36px;
+    line-height: 1.11;
+    color: #fff;
+    font-weight: 700;
+    text-align: center;
+    letter-spacing: 0.02em;
+    max-width: 216px;
+    margin-bottom: 72px;
+}
+.section-one-button{
+    display: block;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #fff;
+    border-radius: 4px;
+    width: 169px;
+    height: 56px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background: #4d5ae5;
+    border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin: 0 auto;
+}
+@media (min-resolution: 2x) {
+    .section-one-container{
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/section-one/Dark-bg@2x-mob-min.jpg);
+    }
+}
+@media screen and (min-width: 768px) {
+    .section-one-container{
+    padding: 112px 136px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/section-one/Dark-bg-tab-min.jpg);
+    }
+    .section-one-title{
+    font-size: 56px;
+    line-height: 1.07;
+    max-width: 496px;
+    margin-bottom: 36px;
+    }
+    @media (min-resolution: 2x) {
+    .section-one-container{
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/section-one/Dark-bg@2x-tab-min.jpg);
+    }
+}
+}
+@media screen and (min-width: 1168px) {
+    .section-one-container{
+    padding: 188px 472px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/section-one/people-office-min.jpg);
+    }
+    @media (min-resolution: 2x) {
+    .section-one-container{
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/section-one/people-office@2x-min.jpg);
     }
 }
