--- a/css/style.css
+++ b/css/style.css
@@ -277,3 +277,4 @@ img{
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/section-one/people-office@2x-min.jpg);
     }
 }
+}
