--- a/css/style.css
+++ b/css/style.css
@@ -282,8 +282,8 @@ img{
 
 /* section-two */
 
-.section-two{
-    padding: 96px 0;
+.section-two-container{
+    padding: 96px 16px;
 }
 .section-two-list{
     display: flex;
@@ -328,8 +328,8 @@ img{
     }
 }
 @media screen and (min-width: 1168px) {
-    .section-two{
-        padding: 120px 0;
+    .section-two-container{
+        padding: 120px 156px;
     }
     .section-two-list{
         gap: 24px;
@@ -360,5 +360,115 @@ img{
         line-height: 1.5;
         color: #434455;
         letter-spacing: 0.02em;
+    }
+}
+
+/* section-three */
+
+.section-three-container{
+    background: #f4f4fd;
+    padding: 96px 28px;
+}
+.title-section-three{
+    font-size: 36px;
+    line-height: 1.11;
+    color: #2e2f42;
+    font-weight: 700;
+    letter-spacing: 0.02em;
+    text-align: center;
+    text-transform: capitalize;
+    margin-bottom: 72px;
+}
+.section-three-list{
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+}
+.section-three-img{
+    background-color: #FFFFFF;
+    border-radius: 0px 0px 4px 4px;
+    max-width: 264px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);;
+}
+.name-team{
+    padding: 32px 16px;
+    text-align: center;
+}
+.title-team{
+    font-size: 20px;
+    line-height: 1.2;
+    color: #2e2f42;
+    font-weight: 500;
+    letter-spacing: 0.02em;
+    margin-bottom: 8px;
+}
+.section-three-p{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #434455;
+    letter-spacing: 0.02em;
+    margin-bottom: 8px;
+}
+.list-icons{
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+.list-icons-item{
+    width: 40px;
+    height: 40px;
+}
+.icons-link{
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icons-item{
+    fill: #f4f4fd;
+}
+.icons-link:hover,
+.icons-link:focus{
+    background-color: #404bbf;
+}
+
+@media screen and (min-width: 768px) {
+    .section-three-container{
+        padding: 96px 108px;
+    }
+    .section-three-list{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 64px 24px;
+    }
+    .section-three-img{
+        width: calc((100% - 24px) / 2);
+    }
+    
+}
+
+@media screen and (min-width: 1168px) {
+    .section-three-container{
+        padding: 120px 156px;
+    }
+    .section-three-list{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 64px 24px;
+    }
+    .section-three-list{
+        display: flex;
+        flex-direction: row;
+        gap: 24px;
+    }
+    .section-three-img{
+        width: calc((100% - 72px) / 4);
     }
 }
