--- a/css/style.css
+++ b/css/style.css
@@ -472,3 +472,63 @@ img{
         width: calc((100% - 72px) / 4);
     }
 }
+
+
+/* section-four */
+.section-four-container{
+    padding: 96px 16px;
+}
+.section-four-list{
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+}
+.section-four-list-item{
+    width: 288px;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.wrapper-p{
+    display: none;
+}
+.section-four-item {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
+.title-section-four {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+}
+.p-four {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+@media screen and (min-width: 768px) {
+    .section-four-list{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 72px 24px;
+    }
+    .section-four-list-item{
+        width: calc((100% - 24px) / 2);
+    }
+}
+@media screen and (min-width: 1168px) {
+    .section-four-container{
+        padding: 120px 156px;
+    }
+    .section-four-list{
+        gap: 48px 24px;
+    }
+    .section-four-list-item{
+        width: calc((100% - 48px) / 3);
+    }
+}
