--- a/css/style.css
+++ b/css/style.css
@@ -657,6 +657,7 @@ img{
     .footer-container {
         padding-top: 100px;
         padding-left: 156px;
+        padding-bottom: 100px;
         display: flex;
         flex-wrap: nowrap;
     }
