--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,6 @@ img{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 156px;
 }
 .page-nav, .nav-address{
     display: none;
@@ -191,6 +190,9 @@ img{
     }
 }
 @media screen and (min-width: 1168px) {
+    .header-container{
+        padding: 0 156px;
+    }
     .link-logo-header{
         margin-right: 76px;
     }
@@ -672,5 +674,197 @@ img{
     }
     .footer-inp{
         opacity: 1;
+    }
+}
+
+/* modal */
+
+.modal-overlay{
+    width: 100%;
+    height: 100%;
+    background: rgba(46, 47, 66, 0.4);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /* opacity: 0;
+    pointer-events: none; */
+}
+.modal-overlay.is-open{
+    opacity: 1;
+    pointer-events: auto;
+}
+.modal{
+    position: absolute;
+    top: 8px;
+    left: auto;
+    background: #fcfcfc;
+    border-radius: 4px;
+    width: 288px;
+    max-height: 623px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    display: flex;
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    flex-direction: column;
+    padding: 72px 16px 24px 16px;
+}
+.modal-btn{
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-btn:hover,
+.modal-btn:focus{
+    background-color: #404bbf;
+    border: none;
+    fill: #ffffff;
+}
+.modal-icons{
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-p{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 16px;
+}
+.name-div{
+    margin-bottom: 8px;
+}
+.lb-name{
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    display: block;
+    margin-bottom: 4px;
+}
+.modal-inp-div{
+    position: relative;
+}
+.modal-inp-name{
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding-left: 38px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-inp-name:focus{
+    border-color: #4D5AE5;
+}
+.modal-inp-icons{
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-inp-name:focus + .modal-inp-icons{
+    fill: #4D5AE5;
+}
+.modal-div-textarea{
+    margin-bottom: 16px;
+}
+.modal-textarea{
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding: 8px 16px;
+    outline: transparent;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-textarea:focus{
+    border-color: #4D5AE5;
+}
+.modal-div-check{
+    margin-bottom: 24px;
+}
+.lb-check{
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    cursor: pointer;
+}
+.check-wrapper{
+    display: flex;
+    align-items: center;
+}
+.lb-span{
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+    margin-right: 8px;
+}
+.modal-check:checked + .lb-check span{
+    background-color: #404bbf;
+    border: none;
+    fill: #F4F4FD;;
+}
+.modal-link{
+    color: #4d5ae5;
+    text-decoration: underline;
+}
+.modal-btn-end{
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+    background-color: #4D5AE5;
+    border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin: 0 auto;
+}
+@media screen and (min-width: 768px) {
+    .modal{
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 408px;
+        padding: 72px 24px 24px 24px;
     }
 }
