--- a/css/style.css
+++ b/css/style.css
@@ -691,8 +691,8 @@ img{
     justify-content: center;
     align-items: center;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    /* opacity: 0;
-    pointer-events: none; */
+    opacity: 0;
+    pointer-events: none;
 }
 .modal-overlay.is-open{
     opacity: 1;
@@ -867,4 +867,73 @@ img{
         width: 408px;
         padding: 72px 24px 24px 24px;
     }
+}
+
+
+/* menu */
+.modal-menu{
+    width: 100%;
+    height: 100%;
+    background: rgba(46, 47, 66, 0.4);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* opacity: 0;
+    pointer-events: none; */
+}
+.modal-menu.is-open{
+    opacity: 1;
+    pointer-events: auto;
+}
+.menu{
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #fcfcfc;
+    border-radius: 4px;
+    width: 100%;
+    height: 100%;
+    padding: 72px 24px 40px 16px;
+}
+.menu-list{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-bottom: 168px;
+}
+.menu-list-item{
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    cursor: pointer;
+}
+.menu-list-item:hover, .menu-list-item:active{
+    color: #404bbf;
+}
+.menu-address{
+    margin-bottom: 48px;
+}
+.address-menu{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+.menu-address-link{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+.menu-address-link:hover, .menu-address-link:active{
+    color: #4d5ae5;
+}
+.list-icons-menu{
+    gap: 40px;
 }
