--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,6 @@ img{
 .container{
     padding: 0 16px;
     margin: 0 auto;
-    max-width: 320px;
 }
 
 @media screen and (min-width: 768px) {
@@ -73,11 +72,11 @@ img{
     max-width: 768px;
     }
 }
-@media screen and (min-width: 1168px) {
+@media screen and (min-width: 1158px) {
     .container{
     padding: 0 15px;
     margin: 0 auto;
-    max-width: 1440px;
+    max-width: 1158px;
     }
 }
 
@@ -189,10 +188,7 @@ img{
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 }
-@media screen and (min-width: 1168px) {
-    .header-container{
-        padding: 0 156px;
-    }
+@media screen and (min-width: 1158px) {
     .link-logo-header{
         margin-right: 76px;
     }
@@ -207,14 +203,20 @@ img{
         line-height: 1.5;
         letter-spacing: 0.02em;
     }
+    .nav-address-link{
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+    }
 }
-
 
 /* section-one */
 
-.section-one-container{
+.section-one{
+    max-width: 320px;
     background: #2e2f42;
-    padding: 72px 52px;
+    padding-top: 72px;
+    padding-bottom: 72px;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/section-one/Dark-bg-mob-min.jpg);
     background-repeat: no-repeat;
     background-position: center;
@@ -230,6 +232,7 @@ img{
     text-align: center;
     letter-spacing: 0.02em;
     max-width: 216px;
+    margin: 0 auto;
     margin-bottom: 72px;
 }
 .section-one-button{
@@ -249,34 +252,39 @@ img{
     margin: 0 auto;
 }
 @media (min-resolution: 2x) {
-    .section-one-container{
+    .section-one{
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/section-one/Dark-bg@2x-mob-min.jpg);
     }
 }
 @media screen and (min-width: 768px) {
-    .section-one-container{
-    padding: 112px 136px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/section-one/Dark-bg-tab-min.jpg);
+    .section-one{
+        max-width: 768px;
+        padding-top: 112px;
+        padding-bottom: 112px;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/section-one/Dark-bg-tab-min.jpg);
     }
     .section-one-title{
-    font-size: 56px;
-    line-height: 1.07;
-    max-width: 496px;
-    margin-bottom: 36px;
+        font-size: 56px;
+        line-height: 1.07;
+        max-width: 496px;
+        margin-bottom: 36px;
+        max-width: 496px;
     }
     @media (min-resolution: 2x) {
-    .section-one-container{
+    .section-one{
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/section-one/Dark-bg@2x-tab-min.jpg);
     }
 }
 }
-@media screen and (min-width: 1168px) {
-    .section-one-container{
-    padding: 188px 472px;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/section-one/people-office-min.jpg);
+@media screen and (min-width: 1158px) {
+    .section-one{
+        max-width: 1440px;
+        padding-top: 188px;
+        padding-bottom: 188px;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/section-one/people-office-min.jpg);
     }
     @media (min-resolution: 2x) {
-    .section-one-container{
+    .section-one{
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/section-one/people-office@2x-min.jpg);
     }
 }
@@ -285,16 +293,15 @@ img{
 
 /* section-two */
 
-.section-two-container{
-    padding: 96px 16px;
+.section-two{
+    padding-top: 96px;
+    padding-bottom: 96px;
+    margin: 0 auto;
 }
 .section-two-list{
     display: flex;
     flex-direction: column;
     gap: 72px;
-}
-.section-two-list-item{
-    max-width: 288px;
 }
 .antenna {
     display: none;
@@ -330,9 +337,10 @@ img{
         text-align: left;
     }
 }
-@media screen and (min-width: 1168px) {
-    .section-two-container{
-        padding: 120px 156px;
+@media screen and (min-width: 1158px) {
+    .section-two{
+        padding-top: 120px;
+        padding-bottom: 120px;
     }
     .section-two-list{
         gap: 24px;
@@ -350,7 +358,7 @@ img{
         border: 1px solid #8e8f99;
         margin-bottom: 8px;
     }
-    .title-three-level{
+    .title-section-two-list{
         font-size: 20px;
         line-height: 1.2;
         color: #2e2f42;
@@ -368,9 +376,11 @@ img{
 
 /* section-three */
 
-.section-three-container{
+.section-three{
     background: #f4f4fd;
-    padding: 96px 28px;
+    padding-top: 96px;
+    padding-bottom: 96px;
+    margin: 0 auto;
 }
 .title-section-three{
     font-size: 36px;
@@ -441,9 +451,6 @@ img{
 }
 
 @media screen and (min-width: 768px) {
-    .section-three-container{
-        padding: 96px 108px;
-    }
     .section-three-list{
         display: flex;
         flex-direction: row;
@@ -456,9 +463,10 @@ img{
     
 }
 
-@media screen and (min-width: 1168px) {
-    .section-three-container{
-        padding: 120px 156px;
+@media screen and (min-width: 1158px) {
+    .section-three{
+        padding-top: 120px;
+        padding-bottom: 120px;
     }
     .section-three-list{
         display: flex;
@@ -478,8 +486,10 @@ img{
 
 
 /* section-four */
-.section-four-container{
-    padding: 96px 16px;
+.section-four{
+    padding-top: 96px;
+    padding-bottom: 96px;
+    margin: 0 auto;
 }
 .section-four-list{
     display: flex;
@@ -524,9 +534,10 @@ img{
         width: calc((100% - 24px) / 2);
     }
 }
-@media screen and (min-width: 1168px) {
-    .section-four-container{
-        padding: 120px 156px;
+@media screen and (min-width: 1158px) {
+    .section-four{
+        padding-top: 120px;
+        padding-bottom: 120px;
     }
     .section-four-list{
         gap: 48px 24px;
@@ -534,13 +545,37 @@ img{
     .section-four-list-item{
         width: calc((100% - 48px) / 3);
     }
+    .img-container{
+        position: relative;
+        overflow: hidden;
+    }
+    .wrapper-p{
+        display: block;
+        position: absolute;
+        top: 0;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #f4f4fd;
+        padding: 40px 32px;
+        background-color: #4d5ae5;
+        height: 100%;
+        width: 100%;
+        transform: translateY(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .section-four-list-item:hover .wrapper-p{
+        transform: translateY(0%);
+    }
 }
 
 /* footer */
 
-.footer-container {
+.footer {
     background: #2e2f42;
-    padding: 96px 16px;
+    padding-top: 96px;
+    padding-bottom: 96px;
+    margin: 0 auto;
 }
 .footer-wrapper{
     margin-bottom: 72px;
@@ -571,6 +606,7 @@ img{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 72px;
 }
 .social-p{
     font-weight: 500;
@@ -627,7 +663,6 @@ img{
 }
 @media screen and (min-width: 768px) {
     .footer-container {
-        padding: 96px 108px;
         display: flex;
         flex-wrap: wrap;
     }
@@ -653,18 +688,23 @@ img{
     }
     .footer-inp{
         width: 264px;
+        margin-bottom: 0;
     }
 }
-@media screen and (min-width: 1168px) {
-    .footer-container {
+@media screen and (min-width: 1158px) {
+    .footer {
         padding-top: 100px;
-        padding-left: 156px;
         padding-bottom: 100px;
-        display: flex;
+    }
+    .footer-container{
         flex-wrap: nowrap;
     }
     .footer-wrapper{
-        padding-right: 120px;
+        margin-right: 120px;
+        margin-bottom: 0;
+    }
+    .footer-social{
+        margin-bottom: 0;
     }
     .p-footer {
         width: 264px;
@@ -674,6 +714,7 @@ img{
     }
     .footer-inp{
         opacity: 1;
+        margin-bottom: 0;
     }
 }
 
@@ -832,6 +873,7 @@ img{
     justify-content: center;
     fill: transparent;
     margin-right: 8px;
+    flex-shrink: 0;
 }
 .modal-check:checked + .lb-check span{
     background-color: #404bbf;
@@ -890,20 +932,23 @@ img{
     pointer-events: auto;
 }
 .menu{
+    display: flex;
+    flex-direction: column;
     position: absolute;
     top: 0;
     left: 0;
     background: #fcfcfc;
     border-radius: 4px;
-    width: 320px;
+    width: 100%;
     height: 100%;
-    padding: 72px 24px 40px 16px;
+    padding-top: 72px;
+    padding-bottom: 40px;
 }
 .menu-list{
     display: flex;
     flex-direction: column;
     gap: 40px;
-    margin-bottom: 168px;
+    margin-bottom: auto;
 }
 .menu-list-item{
     font-weight: 700;
@@ -937,4 +982,14 @@ img{
 .list-icons-menu{
     gap: 40px;
 }
-
+.active-link{
+    color: #404bbf;
+}
+.active-address{
+    color: #4d5ae5;
+}
+@media screen and (min-width: 768px) {
+    .modal-menu{
+        display: none;
+    }
+}
