--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,7 @@ img{
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-container{
+    max-width: 320px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -120,6 +121,9 @@ img{
 }
 
 @media screen and (min-width: 768px) {
+    .header-container{
+        max-width: 768px;
+    }
     .nav-btn-mob {
         display: none;
     }
@@ -189,6 +193,10 @@ img{
     }
 }
 @media screen and (min-width: 1158px) {
+    .header-container{
+        max-width: 1440px;
+        padding: 0 156px;
+    }
     .link-logo-header{
         margin-right: 76px;
     }
@@ -283,6 +291,9 @@ img{
         padding-bottom: 188px;
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/section-one/people-office-min.jpg);
     }
+    .section-one-title{
+        margin-bottom: 48px;
+    }
     @media (min-resolution: 2x) {
     .section-one{
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/section-one/people-office@2x-min.jpg);
@@ -359,6 +370,7 @@ img{
         margin-bottom: 8px;
     }
     .title-section-two-list{
+        font-weight: 500;
         font-size: 20px;
         line-height: 1.2;
         color: #2e2f42;
@@ -396,6 +408,7 @@ img{
     display: flex;
     flex-direction: column;
     gap: 72px;
+    align-items: center;
 }
 .section-three-img{
     background-color: #FFFFFF;
@@ -454,6 +467,7 @@ img{
     .section-three-list{
         display: flex;
         flex-direction: row;
+        justify-content: center;
         flex-wrap: wrap;
         gap: 64px 24px;
     }
@@ -619,7 +633,6 @@ img{
 .list-icons-footer{
     display: flex;
     gap: 16px;
-    margin-bottom: 72px;
 }
 .icons-footer:hover,
 .icons-footer:focus{
@@ -634,7 +647,10 @@ img{
     color: #ffffff;
     text-align: center;
 }
-
+.lb-footer{
+    display: flex;
+    justify-content: center;
+}
 .footer-inp{
     width: 288px;
     height: 40px;
@@ -665,6 +681,7 @@ img{
     .footer-container {
         display: flex;
         flex-wrap: wrap;
+        padding: 0 108px;
     }
     .footer-wrapper{
         width: 264px;
@@ -698,6 +715,7 @@ img{
     }
     .footer-container{
         flex-wrap: nowrap;
+        padding: 0 15px;
     }
     .footer-wrapper{
         margin-right: 120px;
@@ -987,6 +1005,9 @@ img{
 }
 .active-address{
     color: #4d5ae5;
+}
+.menu-address-link{
+    font-style: normal;
 }
 @media screen and (min-width: 768px) {
     .modal-menu{
